--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,11 +14,11 @@ services:
     depends_on:
       - zookeeper
     ports:
-      - "9092:9092"
+      - "${KAFKA_PORT}:9092"
     environment:
       ALLOW_PLAINTEXT_LISTENER: "yes"
       KAFKA_ENABLE_KRAFT: "no"
-      KAFKA_CFG_ZOOKEEPER_CONNECT: "zookeeper:2181"
+      KAFKA_CFG_ZOOKEEPER_CONNECT: ${KAFKA_ZOOKEEPER}
       KAFKA_CFG_LISTENERS: PLAINTEXT://:9092
       KAFKA_CFG_AUTO_CREATE_TOPICS_ENABLE: "true" 
     networks:
@@ -30,9 +30,9 @@ services:
     depends_on:
       - kafka
     ports:
-      - "5080:8080"
+      - "${KAFKA_UI_PORT}:8080"
     environment:
-      KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka:9092
+      KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: ${KAFKA_BROKER}
       KAFKA_CLUSTERS_0_NAME: dev
     networks:
       - kafka
@@ -41,8 +41,12 @@ services:
     depends_on:
       - kafka
     entrypoint: ["/bin/sh", "-c"]
-    command: |
-      "kafka-topics.sh --create --if-not-exists --topic weather_data --bootstrap-server kafka:9092 --partitions 1 --replication-factor 1"
+    command: >
+      kafka-topics.sh --create --if-not-exists
+      --topic ${KAFKA_TOPIC}
+      --bootstrap-server ${KAFKA_BROKER}
+      --partitions 1
+      --replication-factor 1
     networks:
       - kafka
 
@@ -91,9 +95,18 @@ services:
       --master ${SPARK_MASTER_URL}
       --packages org.apache.spark:spark-sql-kafka-0-10_2.12:3.5.0,org.postgresql:postgresql:42.7.3
       /data/spark_kafka_stream.py
-
     volumes:
       - ${DATA_DIR}:/data
+    environment:
+      - PG_HOST=${PG_HOST}
+      - PG_PORT=${PG_PORT}
+      - PG_DB=${PG_DB}
+      - PG_USER=${PG_USER}
+      - PG_PASSWORD=${PG_PASSWORD}
+      - PG_TABLE_WEATHER=${PG_TABLE_WEATHER}
+      - KAFKA_BROKER=${KAFKA_BROKER}
+      - KAFKA_TOPIC=${KAFKA_TOPIC}
+      - SPARK_MASTER_URL=${SPARK_MASTER_URL}
     networks:
       - kafka
 
@@ -134,16 +147,17 @@ services:
     container_name: postgres-weather
     restart: always
     environment:
-      POSTGRES_USER: airflow
-      POSTGRES_PASSWORD: airflow
-      POSTGRES_DB: weather
+      POSTGRES_USER: ${PG_USER}
+      POSTGRES_PASSWORD: ${PG_PASSWORD}
+      POSTGRES_DB: ${PG_DB}
     ports:
-      - "5432:5432"
+      - "${PG_PORT}:5432"
     volumes:
       - pg_data:/var/lib/postgresql/data
       - ./postgres-init:/docker-entrypoint-initdb.d
     networks:
       - kafka
+
 volumes:
   pg_data:
       
