--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-.env
 # Archivos sensibles
 .env
 .env.*
@@ -26,7 +25,7 @@ __pycache__/
 .DS_Store
 Thumbs.db
 
-# Archivos de Airflow
+# Airflow
 airflow/airflow.db
 airflow/airflow.cfg
 airflow/unittests.cfg
@@ -35,28 +34,30 @@ airflow/dags/__pycache__/
 airflow/plugins/__pycache__/
 airflow/.airflowenv
 
-# Archivos de Spark (si dejás algún log o temporales)
+# Spark
 spark-warehouse/
 metastore_db/
 *.crc
 
-# Archivos de Jupyter Notebook
+# Jupyter
 .ipynb_checkpoints/
+notebooks/
 
-# Archivos de VSCode (si usás)
+# VSCode
 .vscode/
 
-# Archivos generados por Docker
+# Docker
 **/.docker-compose.override.yml
 docker-compose.override.yml
 
-# Build de imagenes o archivos temporales
+# Archivos temporales y binarios
 *.tar
 *.img
 *.pid
 *.bak
+*.swp
 
-# Archivos relacionados con pytest u otros tests
+# Pytest y testing
 .cache/
 .tox/
 pytest_cache/
@@ -64,5 +65,7 @@ pytest_cache/
 coverage.xml
 htmlcov/
 
-# Otros
-*.swp
+# Carpeta util (solo archivos temporales)
+util/*.log
+util/*.tmp
+util/__pycache__/
