--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -99,12 +99,12 @@ services:
     volumes:
       - ${DATA_DIR}:/data
     environment:
-      - PG_HOST=${PG_HOST}
-      - PG_PORT=${PG_PORT}
-      - PG_DB=${PG_DB}
-      - PG_USER=${PG_USER}
-      - PG_PASSWORD=${PG_PASSWORD}
-      - PG_TABLE_WEATHER=${PG_TABLE_WEATHER}
+      # - PG_HOST=${PG_HOST}
+      # - PG_PORT=${PG_PORT}
+      # - PG_DB=${PG_DB}
+      # - PG_USER=${PG_USER}
+      # - PG_PASSWORD=${PG_PASSWORD}
+      # - PG_TABLE_WEATHER=${PG_TABLE_WEATHER}
       - KAFKA_BROKER=${KAFKA_BROKER}
       - KAFKA_TOPIC=${KAFKA_TOPIC}
       - SPARK_MASTER_URL=${SPARK_MASTER_URL}
@@ -158,11 +158,14 @@ services:
   #   networks:
   #     - kafka
 
-volumes:
-  pg_data:
+# volumes:
+#   pg_data:
       
 networks:
   kafka:
     external: true
     name: airflow_pipeline_net
 
+#networks:
+#  airflow_pipeline_net:
+ #   driver: bridge
