--- a/docker-compose-airflow.yml
+++ b/docker-compose-airflow.yml
@@ -4,6 +4,8 @@ x-airflow-common:
   build:
     context: .
     dockerfile: Dockerfile
+    args:
+      DOCKER_GID: ${DOCKER_GID}
   environment:
     &airflow-common-env
     AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: postgresql+psycopg2://${AIRFLOW_DB_USER}:${AIRFLOW_DB_PASSWORD}@${AIRFLOW_DB_HOST}/${AIRFLOW_DB_NAME}
@@ -24,7 +26,8 @@ x-airflow-common:
     - ./logs:/opt/airflow/logs
     - ./plugins:/opt/airflow/plugins
     - /var/run/docker.sock:/var/run/docker.sock 
-  user: "${AIRFLOW_UID}:${AIRFLOW_GID}"
+  #user: "${AIRFLOW_UID}:${AIRFLOW_GID}"
+  user: "0:0"
 
   depends_on:
     &airflow-common-depends-on
